--- a/public/css/app.css
+++ b/public/css/app.css
@@ -168,7 +168,16 @@ body {
 }
 
 .input, textarea {
+  color: rgb(150, 150, 150) !important;
   background-color: rgb(50, 50, 50) !important;
+}
+
+.input::-moz-placeholder, textarea::-moz-placeholder {
+  color: rgb(150, 150, 150);
+}
+
+.input::placeholder, textarea::placeholder {
+  color: rgb(150, 150, 150);
 }
 
 .about {
@@ -665,7 +674,7 @@ body {
   color: rgb(120, 120, 120);
 }
 
-.profile-resources-items-hint {
+.profile-resource-items-hint {
   margin-top: 45px;
   margin-left: 20px;
   margin-right: 20px;
