Download hosting or linking

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -152,7 +152,7 @@ body {
     border-radius: 25px;
 }
 
-.input, textarea {
+.input, textarea, span.button {
     color: rgb(150, 150, 150) !important;
     background-color: rgb(50, 50, 50) !important;
 }
