--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -177,7 +177,7 @@ body {
     width: 100%;
     height: 200px;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
     margin-bottom: 30px;
 }
 .banner-content {
