--- a/public/css/app.css
+++ b/public/css/app.css
@@ -363,7 +363,7 @@ body {
 
 .resource-item-full-image {
   width: 100%;
-  height: 615px;
+  height: 492px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   border-top-left-radius: 25px;
@@ -371,6 +371,15 @@ body {
 }
 @media screen and (max-width: 768px) {
   .resource-item-full-image {
+    display: none;
+  }
+}
+
+.resource-item-full-preview-mobile {
+  margin-bottom: 25px;
+}
+@media screen and (min-width: 769px) {
+  .resource-item-full-preview-mobile {
     display: none;
   }
 }
