--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -233,14 +233,14 @@ body {
     margin-top: 20px;
     margin-left: 10px;
     margin-right: 10px;
-    width: 530px;
+    width: 345px;
     @media screen and (max-width: 546px) {
         width: 100%;
     }
 }
 .resource-item-image {
     width: 100%;
-    height: 304px;
+    height: 225px;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     border-top-left-radius: 25px;
@@ -248,6 +248,12 @@ body {
     @media screen and (max-width: 768px) {
         display: none;
     }
+}
+.resource-item-preview-mobile {
+    @media screen and (min-width: 769px) {
+        display: none;
+    }
+    margin-bottom: 12px;
 }
 .resource-item-about {
     margin-left: 20px;
