--- a/public/css/app.css
+++ b/public/css/app.css
@@ -260,6 +260,24 @@ a.dropdown-item:hover {
   background-color: rgb(50, 50, 50);
 }
 
+.scroll-to-top {
+  position: fixed;
+  z-index: 3;
+  bottom: 12px;
+  right: 12px;
+}
+
+.scroll-to-top-inner {
+  background-color: rgb(100, 100, 100);
+  border-radius: 50%;
+  padding: 12px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.scroll-to-top-inner a {
+  color: rgb(200, 200, 200);
+}
+
 .footer {
   width: 100%;
   color: rgb(150, 150, 150);
