--- a/public/css/app.css
+++ b/public/css/app.css
@@ -804,7 +804,7 @@ a.dropdown-item:hover {
   position: absolute;
   top: 31px;
   z-index: 4;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(100, 100, 100);
   display: none;
   border: 1px solid #ccc;
 }
@@ -872,13 +872,13 @@ a.dropdown-item:hover {
   position: relative;
   width: 100%;
   height: auto;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(100, 100, 100);
   padding: 21px;
   border-radius: 4px;
 }
 
 .notification-item:hover {
-  background-color: rgb(250, 250, 250);
+  background-color: rgb(120, 120, 120);
 }
 
 .notification-item-icon {
@@ -902,13 +902,21 @@ a.dropdown-item:hover {
   }
 }
 
+.notification-item-message {
+  color: rgb(200, 200, 200);
+}
+
 .notification-item-message a {
-  color: rgb(100, 100, 100);
+  color: rgb(200, 200, 200);
   font-weight: bold;
 }
 
 .notification-item-message a:hover {
   text-decoration: underline;
+}
+
+.notification-item-message-dark {
+  color: rgb(150, 150, 150);
 }
 
 .is-new-notification {
